USAGOV-1469-Homepage-grid-alignment-fix: Fix all topics cards header

--- a/web/themes/custom/usagov/sass/_homepage.scss
+++ b/web/themes/custom/usagov/sass/_homepage.scss
@@ -331,8 +331,7 @@
 }
 
 .homepage-card_header {
-  padding-block: 15px !important;
-  margin-inline: 15px;
+  padding: 15px !important;
   border-top: 1px dashed #1b1b1b;
 }
 
